+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.4.4c1?
=============================

*Release date: DD-MMM-2006*

Core and builtins
-----------------

- Integer negation and absolute value were fixed to not rely
  on undefined behaviour of the C compiler anymore.

- Patch #1567691: super() and new.instancemethod() now don't accept
  keyword arguments any more (previously they accepted them, but didn't
  use them).

- staticmethod() and classmethod() also now complain about keyword args
  instead of silently ignoring them.

- Bug #1331062: Fix error in UTF-7 codec.

- Bug #1365916: Fix an int/long mismatch in the sorted() built-in.

- Fix memory leak of coding spec in Parser/tokenizer.c.

- Fix memory leak in file_init.
 
- Overflow checking code in integer division ran afoul of new gcc
  optimizations.  Changed to be more standard-conforming.

- Fix warnings reported by the Coverity and Klocwork static analysis tools.

- Patch #1541585: fix buffer overrun when performing repr() on
  a unicode string in a build with wide unicode (UCS-4) support.

- Bug #1536786: buffer comparison could emit a RuntimeWarning.

- Bug #1535165: fixed a segfault in input() and raw_input() when
  sys.stdin is closed.

- Bug #1524310: Properly report errors from FindNextFile in os.listdir.

- Bug #1232517: An overflow error was not detected properly when
  attempting to convert a large float to an int in os.utime().

- Bug #927248: Recursive method-wrapper objects can now safely
  be released.

- Bug #992017: A classic class that defined a __coerce__() method that returned
  its arguments swapped would infinitely recurse and segfault the interpreter.

- Bug #532646: The object set to the __call__ attribute has its own __call__
  attribute checked; this continues until the attribute can no longer be found
  or segfaulting.  Recursion limit is now followed.
